# inferno

./: .gitignore  CONTRIBUTING.md  LICENSE  Pipfile  README.md  TODO.md  WIKI_SUMMARY.md
backend/: BUILDING.md  README.md  config.py  logging_config.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/inference/: model_loader.py
backend/server/: protocol.py  websocket_server.py
backend/tests/: test_inference.py  test_logging.py
docs/: architecture.md  design.md  roadmap.md  troubleshooting.md
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src-tauri/: tauri.conf.json
frontend/src/components/: About.js  Compare.js  Dashboard.js  LogitsChart.js  Models.js  PromptInput.js  PromptStudio.js  Sessions.js  Settings.js  Sidebar.js  StatusBar.js  ThemeToggle.js  TokenStream.js
frontend/src/context/: AppContext.js
frontend/src/hooks/: useWebSocket.js
frontend/src/styles/: app.css
frontend/src/utils/: websocket.js
frontend/tests/: LogitsChart.test.js  PromptInput.test.js  StatusBar.test.js  TokenStream.test.js  placeholder.test.js  useWebSocket.test.js
scripts/: build.sh  dev.sh
wiki/: Architecture.md  Common-Issues.md  Contributing.md  FAQ.md  GGUF-Models.md  Getting-Started.md  Home.md  Installation.md  README.md  Understanding-LLM-Inference.md
