[project]
name = "inferno-backend"
version = "0.1.0"
description = "Backend for Inferno LLM Debugger"
requires-python = ">=3.10"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
exclude = [".git", "__pycache__", "build", "dist", ".venv"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"] 